--- a/src/componentsFiles/TodoApp.css
+++ b/src/componentsFiles/TodoApp.css
@@ -38,7 +38,7 @@
     padding-left: 10px;
 }
 
-#todo_app #inp_container #inp #add {
+#todo_app #inp_container #inp #addItem {
     padding: 5px 20px;
     border-radius: 5px;
     background-color: rgb(28, 187, 68);
