--- a/src/comReactRouterDom/ProductsItems/Mobile.css
+++ b/src/comReactRouterDom/ProductsItems/Mobile.css
@@ -4,7 +4,35 @@
 }
 
 .parentPro .childprod {
-    width: 300px;
+    width: 250px;
     margin: 20px;
     box-shadow: 1px 2px 10px 2px blue;
+}
+
+.parentPro .addBtnInCard {
+    color: white;
+    background-color: blue;
+    padding: 5px 20px;
+    border: none;
+    border-radius: 4px;
+}
+
+.cardTotal {
+    display: inline-block;
+    /* background-color: blueviolet; */
+    margin-left: 80%;
+    position: relative;
+}
+
+.cardTotal i {
+    font-size: 50px;
+    color: rgb(54, 4, 238);
+    margin-left: 40px;
+}
+
+.totalProduct {
+    position: absolute;
+    display: inline;
+    color: red;
+    font-size: 30px;
 }
